Add award dto and add it to elastic search
