# spring-server/src/main/java/ch/heigvd/quaris/services/ElasticSearchService.java
@@ -1,9 +1,11 @@
 package ch.heigvd.quaris.services;
 
+import ch.heigvd.quaris.api.dto.AwardDTO;
 import ch.heigvd.quaris.api.dto.BadgeDTO;
 import ch.heigvd.quaris.api.dto.EventDTO;
 import ch.heigvd.quaris.models.Badge;
 import ch.heigvd.quaris.models.Event;
+import org.joda.time.DateTime;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
@@ -38,14 +40,30 @@ public class ElasticSearchService {
         EventDTO eventDTO = new ModelMapper().map(event, EventDTO.class);
         eventDTO.setApplication(event.getApp().getName());
 
-        System.out.println("POST ");
-        System.out.println(eventDTO);
-
         RestTemplate restTemplate = new RestTemplate();
         HttpEntity<EventDTO> request = new HttpEntity<>(eventDTO);
 
         ResponseEntity<EventDTO> response = restTemplate
                 .exchange(url, HttpMethod.POST, request, EventDTO.class);
+
+        return response.getStatusCode().equals(HttpStatus.CREATED);
+    }
+
+    @Async
+    public boolean addBadgeToElasticsearch(final Badge badge, final String appName) {
+        final String url = ELASTIC_SEARCH_URL + appName + "/awards";
+
+        BadgeDTO badgeDTO = new ModelMapper().map(badge, BadgeDTO.class);
+        AwardDTO awardDTO = new ModelMapper().map(badge, AwardDTO.class);
+        awardDTO.setApplication(appName);
+        awardDTO.setBadge(badgeDTO);
+        awardDTO.setCreatedAt(new DateTime());
+
+        RestTemplate restTemplate = new RestTemplate();
+        HttpEntity<AwardDTO> request = new HttpEntity<>(awardDTO);
+
+        ResponseEntity<AwardDTO> response = restTemplate
+                .exchange(url, HttpMethod.POST, request, AwardDTO.class);
 
         return response.getStatusCode().equals(HttpStatus.CREATED);
     }
